Update profile picture and fix behaviour on smaller screens

--- a/style.css
+++ b/style.css
@@ -16,12 +16,19 @@ body {
     color: var(--text-colour);
 }
 
+.all {
+    display: column;
+    padding: 0;
+    margin: 0;
+    width: 100%;
+}
+
 .links-container {
-    position: fixed;
+    position: sticky;
     top: 0;
     left: 0;
     width: 100%;
-    z-index: 100;
+    z-index: 1;
     background: var(--card-bg);
     color: var(--text-color);
     font-size: 1em;
@@ -33,6 +40,7 @@ body {
     display: flex;
     flex-direction: row;
     align-items: flex-start;
+    margin: 0;
 }
 
 .logo {
@@ -70,9 +78,13 @@ body {
 
 .main-content {
     width: 100%;
-    max-width: 1300px;
 }
 
+.content-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 .fullname-container {
     display: flex;
     align-items: center;
@@ -82,7 +94,7 @@ body {
 }
 
 .fullname {
-    padding-top: 70px;
+    padding-top: 30px;
     padding-bottom: 20px;
     position: flex;
     text-align: center;
@@ -118,6 +130,7 @@ body {
 }
 
 .container {
+    max-width: 1300px;
     position: relative;
     margin: 10px 50px 10px 50px;
     padding: 30px 30px 30px 30px;
@@ -128,15 +141,23 @@ body {
 
 .profile-picture {
     width: 50%;
-    max-width: 150px;
+    max-width: 20vw;
     aspect-ratio: 1 / 1;
     border-radius: 50%;
     float: left;
-    margin-right: 20px;
-    margin-bottom: 10px;
+    margin-right: 10px;
+    margin-bottom: 0px;
     object-fit: cover;
     object-position: top;
     border: 4px solid black;
+}
+
+@media (min-width: 500px) {
+    .profile-picture {
+        max-width: 150px;
+        margin-right: 20px;
+        margin-bottom: 10px;
+    }
 }
 
 .bio-container {
@@ -154,6 +175,7 @@ body {
 
 .items-container {
     display: column;
+    max-width: 1300px;
 }
 
 
